--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p>
             <select id="rss_sites" onchange="checkSelection()">
                 <option value="">Resources Vault</option>
-                <option value="GB Hackers">GB Hackers</option>
+                <option value="GB Hackers">Reports</option>
                 <option value="GB Hackers Comments">GB Hackers Comments</option>
                 <option value="HackRead">HackRead</option>
                 <option value="HackRead Comments">HackRead Comments</option>
@@ -125,7 +125,7 @@
     <script>
         const rssUrls = {
             "GB Hackers": [
-                { url: "https://chatgpt.com", title: "GPT" },
+                { url: "https://github.com/HackrHub1/HackerOne-Report", title: "HackerOne Report" },
                 { url: "https://example1.com/article2", title: "GB Hackers Article 2" },
                 { url: "https://example1.com/article3", title: "GB Hackers Article 3" }
             ],
